Closed Bug 36470 Opened 26 years ago Closed 26 years ago

On a multiple monitor Mac, all window colors are VERY wrong.

Categories

(Core :: XUL, defect, P1)

PowerPC
Mac System 9.x
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: rejemy, Assigned: saari)

References

()

Details

(Whiteboard: [nsbeta2-]macos)

When two monitors hooked up, all mozilla windows have severe color problems. The window backgrounds are always black, and most text elements are black as well. The only other color that seems to come through is dark blue. This happens in browser windows, the preference window, ANY mozilla window, and is makes the window completely illegible. Tested with a PowerBook G3/400, MacOS 9.0.4 (with CarbonLib 1.0.3) The problem occurs in both M15 and 4/19's nightly M16 build.
updating component and owner
Assignee: asadotzler → trudelle
Component: Browser-General → XP Toolkit/Widgets
QA Contact: jelwell → jrgm
reassigning to pinkerton for triage, since he has 2 monitors on his Mac
Assignee: trudelle → pinkerton
i don't see this on my mac, but saari does on his. chris, can you look into this? if you don't have time, i'll take it back, but expect me in your cube bugging you ;)
Assignee: pinkerton → saari
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: --- → M16
Keywords: nsbeta2
Putting on [nsbeta2+] radar.
Whiteboard: [nsbeta2+]
This is related to bug 6061. We need to deal with multiple monitors and bit depth changes better.
Blocks: 40158
Mass-moving undated nsbeta2+ bugs to M18
Target Milestone: M16 → M18
I think this is a dup, or at least related, to bug 6061.
Depends on: 6061
No longer depends on: 6061
Whiteboard: [nsbeta2+] → [nsbeta2+]macos
Fixed
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Doesn't fit latest 'would ya pull it off the wire' criteria, marking nsbeta2- in case it gets reopened.
Whiteboard: [nsbeta2+]macos → [nsbeta2-]macos
OS: Mac System 9.x
You need to log in before you can comment on or make changes to this bug.