Fix for nsbeta2+ bug 36470: colors are wrong across multiple monitors of different bit depths on MacOS. r= pinkerton